@@ -6,8 +6,9 @@ plugins {
     id "io.sdkman.vendors"              version "1.1.1"     apply false
     id "com.jfrog.bintray"              version "1.7.3"     apply false
     id "com.github.kt3k.coveralls"      version "2.8.1"     apply false
-    id 'com.github.ben-manes.versions'  version '0.14.0'
+    id 'com.github.ben-manes.versions'  version '0.15.0'
 }
+
 
 if( JavaVersion.current().java7Compatible ) {
     apply plugin: 'com.github.kt3k.coveralls'
@@ -27,25 +28,44 @@ repositories {
 }
 
 ext {
-    asciidoctorjVersion = '1.5.4.1'
+    asciidoctorjVersion = '1.5.6'
+    asciidoctorjDiagramVersion = '1.5.4.1'
     commonsIoVersion = '2.5'
     commonsConfigurationVersion = '1.10'
-    commonsLangVersion = '3.4'
+    commonsLangVersion = '3.6'
     commonsVfs2Version = '2.1'
     args4jVersion = '2.33'
-    freemarkerVersion = '2.3.25-incubating'
-    junitVersion = '4.12'
-    pegdownVersion = '1.6.0'
-    jettyServerVersion = '8.1.19.v20160209'
-    orientDbVersion = '2.2.15'
-    groovyVersion = '2.4.8'
-    slf4jVersion = '1.7.22'
-    logbackVersion = '1.1.9'
-    assertjCoreVersion = '1.7.1'
-    thymeleafVersion = '3.0.3.RELEASE'
+    freemarkerVersion = '2.3.26-incubating'
+    junit4Version = '4.12'
+    flexmarkVersion = '0.27.0'
+    jettyServerVersion = '9.2.22.v20170606'
+    orientDbVersion = '2.2.28'
+    groovyVersion = '2.4.12'
+    slf4jVersion = '1.7.25'
+    logbackVersion = '1.2.3'
+    assertjCoreVersion = '2.8.0'
+    thymeleafVersion = '3.0.7.RELEASE'
     jsonSimpleVersion = '1.1.1'
     jade4jVersion = '1.2.5'
-    mockitoVersion = '1.10.19'
+    mockitoVersion = '2.10.0'
+    jsoupVersion = '1.10.3'
+}
+
+sourceSets {
+    smokeTest {
+        java {
+            srcDir file('src/smoke-test/java')
+        }
+        resources {
+            srcDir file('src/smoke-test/resources')
+        }
+    }
+}
+
+configurations {
+    dist
+
+    runtime.extendsFrom dist
 }
 
 dependencies {
@@ -57,7 +77,6 @@ dependencies {
     compile group: 'args4j', name: 'args4j', version: args4jVersion
     compile group: 'org.freemarker', name: 'freemarker', version: freemarkerVersion
     compile group: 'com.orientechnologies', name: 'orientdb-graphdb', version: orientDbVersion
-    compile group: 'org.pegdown', name: 'pegdown', version: pegdownVersion
     compile group: 'org.asciidoctor', name: 'asciidoctorj', version: asciidoctorjVersion
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: jettyServerVersion
     compile group: 'org.codehaus.groovy', name: 'groovy', version: groovyVersion
@@ -68,14 +87,46 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
     compile group: 'ch.qos.logback', name: 'logback-core', version: logbackVersion
     compile group: 'de.neuland-bfi', name: 'jade4j', version: jade4jVersion
-    testCompile group: 'junit', name: 'junit', version: junitVersion
+    compile group: 'org.jsoup', name:'jsoup', version: jsoupVersion
+    compile "com.vladsch.flexmark:flexmark-all:$flexmarkVersion"
+
+    dist group: 'org.asciidoctor', name: 'asciidoctorj-diagram', version: asciidoctorjDiagramVersion
+
+    testCompile group: 'junit', name: 'junit', version: junit4Version
     testCompile group: 'org.assertj', name: 'assertj-core', version: assertjCoreVersion
     testCompile group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
+
+    smokeTestCompile configurations.testCompile
+    smokeTestCompile sourceSets.test.output
+    smokeTestRuntime configurations.testRuntime
+}
+
+dependencyUpdates.resolutionStrategy = {
+  componentSelection { rules ->
+    rules.all { ComponentSelection selection ->
+      boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
+        selection.candidate.version ==~ /(?i).*[.-]?${qualifier}[.\d-]*/
+      }
+      if (rejected) {
+        selection.reject('Release candidate')
+      }
+    }
+  }
 }
 
 test {
-    jvmArgs '-XX:MaxDirectMemorySize=512m', '-Dorientdb.installCustomFormatter=false=false'
+    jvmArgs '-Xmx512m', '-XX:MaxPermSize=512m', '-XX:MaxDirectMemorySize=128m', '-Dorientdb.installCustomFormatter=false=false'
 }
+
+task smokeTest(type: Test, dependsOn: installDist) {
+    group 'Verification'
+    description 'Runs the integration tests.'
+    setTestClassesDirs sourceSets.smokeTest.output.classesDirs
+    classpath = sourceSets.smokeTest.runtimeClasspath
+    shouldRunAfter test
+}
+
+check.dependsOn smokeTest
 
 jacoco {
     toolVersion = jacocoVersion
